add bulk delete interface
